# Topological-script-visualizer

./: input.gsd  pyproject.toml  script_bonds.txt  script_names.txt  script_pos.txt
gsdc/: main.py
gsdc/gsdc/: molecule.py
script_visualizer/: visualizer_alter.py  visualizer_diblock.py
